--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Strona z odliczaniem do Nowego Roku 2026. Sprawdź, ile dni pozostało do nadchodzącego roku!">
+  <meta name="keywords" content="odliczanie, 2026, Nowy Rok, countdown">
+  <meta name="author" content="Twoje Imię">
   <title>Odliczanie do 2026</title>
   <style>
     body {
