--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="PZG2O96Rq2eNACLtMZHNeLC_PRGaY21iPbknOV1nILU" />
   <meta name="description" content="Strona z odliczaniem do Nowego Roku 2026. Sprawdź, ile dni pozostało do nadchodzącego roku!">
   <meta name="keywords" content="odliczanie, 2026, Nowy Rok, countdown">
   <meta name="author" content="Twoje Imię">
@@ -65,3 +66,4 @@
   </script>
 </body>
 </html>
+
