--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="author" content="Twoje Imię">
   <title>Odliczanie do 2026</title>
   <style>
+    <meta name="google-site-verification" content="Q7l2jFqdVdcRJCBh3ofwHTqThFcWeAJ0Uhf97bNnodA" />
     body {
       font-family: Arial, sans-serif;
       text-align: center;
